# throttate

./: Cargo.toml  README.md  build.rs  index.html  memo.md
.cargo/: config.toml
assets/courses_ron/: course_1_0.ron  course_2_0.ron  index.ron
launcher/: release.json
settings/: settings.toml
src/: config.rs  hammer.rs  main.rs  utils.rs
src/action_effect/: checkpoint.rs  death.rs  mod.rs  utils.rs
src/config/: input.rs  mod.rs
src/course/: load_course.rs  mod.rs  spawn.rs
src/course/course_items/: breakable_box.rs  checkpoint.rs  death_box.rs  dynamic_box.rs  goal.rs  mod.rs  speedup.rs  text_box.rs  turret.rs
src/course/course_items/breakable_box/: brerak_effect.rs  mod.rs
src/course_selection/: mod.rs  selection_ui.rs  systems.rs
src/courses_ron/: course_0_1.ron  course_0_2.ron  course_1_1.ron  index.ron  test.ron  test2.ron
src/hammer/: definition.rs  mod.rs  systems.rs  trail_effect.rs
src/materials/: death_vignette.rs  meteor.rs  mod.rs
src/playing/: exit.rs  main_camera.rs  mod.rs  player.rs  score.rs  startup.rs  ui.rs
src/playing/player/: collision.rs  input.rs  mod.rs
src/playing/player/collision/: checkpoint.rs  death.rs  goal.rs  mod.rs
src/result/: ui.rs
src/settings/: load.rs  mod.rs
src/shaders/: death_vignette.wgsl  meteor.wgsl
src/start/: mod.rs  start_ui.rs  startup.rs
src/state/: mod.rs
src/ui_utils/: mod.rs
src/utils/: button.rs  collision.rs  mod.rs
