[package]
name = "throtate"
version = "0.1.3"
edition = "2024"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[features]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.18.1"
bevy_rapier2d = "0.33"
serde ={ version = "1.0", features = ["derive"] }
ron = "0.12"
anyhow = "1.0"
bevy_hanabi = { version = "0.18.0", default-features = false, features = ["2d"]}
toml = "1.1.2"
